# X-AI-Convergence-Capstone-Crew

./: .gitignore  .gitmodules  AGENTS.md  README.md  graup  openai_api_test.py  pyproject.toml  김동균병신.md
KIS/config/: KIS20251105  codefeedback.md  crolling.py  kis_auth.py  kis_devlp.yaml  openai_KIS_connect  pyproject.toml
KIS/config/openai_kis_connect/: config.py  kis_auth.py  market_code.json  openai_call.py
KIS/config/openai_kis_connect/tools/: get_price.py
KIS/config/자동매매/: test_connection.py
mdfiles/: AIfeedback.md  Meeting.md  WebFeedback.md  WhatcanIdo.md  dap.md  open-trading-api.md  server.md  serverfeedback.md  serverinit.md  work.md
src/xai_capstone/: __init__.py
web/templates/: main.html
활동일지/: X+AI융합 OSS 캡스톤 크루 활동일지_1주차 - 복사본.hwp  X+AI융합 OSS 캡스톤 크루 활동일지_2주차.hwp  X+AI융합 OSS 캡스톤 크루 활동일지_3주차(이동민).hwp  X+AI융합 OSS 캡스톤 크루 활동일지_4주차(이동민).hwp  X+AI융합 OSS 캡스톤 크루 활동일지_5주차(이동민).hwp
